Environmetns newui: Domain form minor alignment fix.

--- a/client/landing/stylus/app.environments.styl
+++ b/client/landing/stylus/app.environments.styl
@@ -699,6 +699,9 @@ div.environments-add-domain-form
     border-bottom       1px solid #d9d9d9
     shadow              0 1px 0 #f5f5f5
 
+    span
+      margin            0 11px
+
     button.small-gray
       margin            3px 0 0 0
       fr()
